# InhouseCrew

./: .env.example  .gitignore  AGENTS.md  Guide.md  README.md  Recommand.md  pyproject.toml
T20260308-000004_장비-시스템을-기획해줘-기본-스탯과-다양한/: request.md  run-metadata.json  status.json  summary.md
T20260308-000004_장비-시스템을-기획해줘-기본-스탯과-다양한/define_player_fantasy/: input.md  metadata.json  result.md  status.json
T20260308-000004_장비-시스템을-기획해줘-기본-스탯과-다양한/design_unique_hook/: innovation.md  input.md  metadata.json  status.json
T20260308-000004_장비-시스템을-기획해줘-기본-스탯과-다양한/generate_game_concept/: concept.md  input.md  metadata.json  status.json
T20260308-000004_장비-시스템을-기획해줘-기본-스탯과-다양한/synthesize_game_direction/: game_design_direction.md  input.md  (+2 more)
configs/: settings.yaml
docs/: agent-config-subdirectories-implementation.md  codex-run-failure-handling-implementation.md  crew-task-status-tracking-implementation.md  crewai-knowledge-memory-implementation.md  game-concept-generator-agent-implementation.md  game-design-team-crew-implementation.md  game-design-team-latency-optimization-implementation.md  game-fantasy-designer-agent-implementation.md  game-innovation-designer-agent-implementation.md  game-market-validator-agent-implementation.md  inhouse-crew-bootstrap-implementation.md  order-pickup-api-implementation.md  worker-console-logging-implementation.md  workspace-task-folder-naming-implementation.md
tests/: fakes.py  test_api.py  test_crew_factory.py  test_main.py  test_orders.py  test_persona_loader.py  test_settings_loader.py  test_task_workspace.py  test_worker.py
(+47 files in other folders)
